...

export const mockMatches: Match[] = [
  {
    location: "London",
    placeName: "Wembley Goals",
    date: "2024-01-04",
    time: "10:00",
    price: 50,
    eachSide: 5,
    numberOfPlayers: 8,
    organiser: {
      contactNumber: "07123456789",
      username: "gtaylor",
...
