...
            ...styles.title,
            textAlign: 'left',
          }}>
          Upcoming Matches
        </Text>
        <Modal
          heading="Choose Date"
          buttonText="Close Calendar"
          button={<Icon icon={<Feather name="calendar" />} />}
          open={open}
          setOpen={setOpen}>
          <Calendar
            value={date}
...
